--- a/public/assets/frontend/css/style.css
+++ b/public/assets/frontend/css/style.css
@@ -2443,7 +2443,7 @@ a.scroll:hover span{
     padding-bottom: 10px;
 }
 .about-breadcrumb .about-back .about-l ul.about-link li.go-home a::after{
-    background-color: #333;
+    background-color: #ffffff;
     content: "";
     position: absolute;
     bottom: -15px;
